--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,9 +21,9 @@ jobs:
       uses: astral-sh/setup-uv@v5
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         uv sync
     - name: Lint with ruff
       run: |
         # stop the build if there are Python syntax errors or undefined names
+        source .venv/bin/activate
         ruff check --output-format github
