--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "customtkinter>=5.2.2",
     "pillow>=11.3.0",
     "psutil>=7.0.0",
+    "pyinstaller>=6.14.1",
     "ruff>=0.12.1",
 ]
