--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Build and test application
 
 on:
   push:
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  lint_and_build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -27,3 +27,7 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         source .venv/bin/activate
         ruff check --output-format github
+    - name: Run pyinstaller to validate
+      run: |
+        source .venv/bin/activate
+        pyinstaller main.spec
