--- a/.github/workflows/publish-release-for-tag.yaml
+++ b/.github/workflows/publish-release-for-tag.yaml
@@ -1,5 +1,5 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# This workflow triggers when a tag is published, and creates a new release
+# for that tag including building and publishing a Windows executable.
 
 name: Publish Executable for Tags
 
@@ -11,7 +11,7 @@ permissions:
   contents: write
 
 jobs:
-  lint_and_build:
+  publish_release:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
