--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,6 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Build and test application
+name: Lint code and test builds
 
 on:
   push:
@@ -13,7 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  lint_and_build:
+  lint_with_ruff:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -27,6 +26,15 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         source .venv/bin/activate
         ruff check --output-format github
+  test_windows_exe_build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
+    - name: Install dependencies
+      run: |
+        uv sync
     - name: Run pyinstaller to validate
       run: |
         source .venv/bin/activate
