--- a/.github/workflows/publish-release-for-tag.yaml
+++ b/.github/workflows/publish-release-for-tag.yaml
@@ -24,7 +24,7 @@ jobs:
       run: |
         source .venv/bin/activate
         pyinstaller main.spec
-        mv dist\main.exe FLiSaMM-${{ github.ref_name }}.exe
+        mv dist/main.exe FLiSaMM-${{ github.ref_name }}.exe
         sha256sum FLiSaMM-${{ github.ref_name }}.exe > SHA256SUMS
     - name: Publish Release
       id: create_release
