--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Lint with ruff
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        source .venv/bin/activate
+        .venv/bin/activate
         ruff check --output-format github
   test_windows_exe_build:
     runs-on: windows-latest
@@ -37,5 +37,5 @@ jobs:
         uv sync
     - name: Run pyinstaller to validate
       run: |
-        source .venv/bin/activate
+        .venv\Scripts\activate
         pyinstaller main.spec
